--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "npm run generate && tsc",
+    "generate": "npx @edgedb/generate edgeql-js --out src/dbschema/edgeql-js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "edgedb": "^0.19.1",
-    "edgeql-js": "^1.0.0"
+    "edgedb": "^1.0.1",
+    "@edgedb/generate": "^0.0.4"
   },
   "devDependencies": {
-    "@types/node": "^17.0.18",
-    "@types/react": "^17.0.39",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.24",
     "next-auth": "^4.2.1",
     "typescript": "^4.5.5"
   }
